resources/assets/sass/partials/_components.scss
/* ... */
.cursor-pointer {
    cursor: pointer;
}
.cursor-default {
    cursor: default;
}
.pointer-events-none {
    pointer-events: none;
}

//Signature pad
#signature-pad {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 300px;
    background-color: white;
    border: 2px solid $dark;
    @extend .rounded;
}

.wrapper {
    position: relative;
    width: 100%;
    height: 300px;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

#omnomcom {
    .btn-category {
        min-width: 190px;
        opacity: 0.6;
        transform: translate(0, 0);
        &.active {
            opacity: 1;
            transform: translate(20px, 0);
        }
    }

    #reload-button {
        opacity: 0;
    }

    #product-nav {
        overflow: auto;
        max-height: 85vh;
    }

    .category-view {
        display: flex;
        flex-wrap: wrap;
        padding-right: 10px;

        &.inactive {
            display: none;
            opacity: 0;
            z-index: 0;
            height: 0;
        }
    }

    .product {
        * {
            corner-shape: squircle;
            border-radius: 40px;
        }
        padding: 10px 0 0 10px;

        &:hover:not(.nostock) {
            cursor: pointer;
        }

        &.nostock {
            opacity: 0.5;

            .product-stock {
                display: none;
            }
        }

        &-inner {
            position: relative;
            width: 100%;
            height: 130px;
            background-color: #333;
            color: #fff;
        }

        &-details {
            position: absolute;
            top: 0;
            left: 130px;
            right: 0;
            bottom: 0;
            background-color: #333;
            padding: 15px;
        }

        &-stock {
            position: absolute;
            top: 0;
            right: 0;
            float: right;
            margin: 10px;
            padding: 10px;
            background-color: #111;
            color: #fff;
        }

        &-name {
            max-height: 90px;
            margin: 10px;
            text-align: left;
            font-size: 30px;
            overflow: hidden;
            text-overflow: ellipsis;
        }

        &-price {
            position: absolute;
            bottom: 10px;
            left: -50px;
            padding: 10px;
            color: #fff;
            font-weight: bold;
            background-color: #26ade4;
        }

        &-image {
            position: absolute;
            top: 20px;
            left: 20px;
            bottom: 20px;
            padding: 15px;
            width: 90px;
            border-radius: 45px;
            background-color: #111;

            &-inner {
                width: 100%;
                height: 100%;
                background-size: contain;
                background-position: center center;
                background-repeat: no-repeat;
                padding: 10px;
            }
        }
    }

    .user {
        &-age {
            color: #fff;
            font-weight: bold;
            background-color: #26ade4;
        }

        &-image {
            background-size: cover;
            background-position: center center;
            background-repeat: no-repeat;
        }
    }

    #cart {
        position: absolute;
        left: 40px;
        bottom: 0;
        top: -20px;
    }

    #cart-overflow {
        @extend .cart-product;
        z-index: 2;
    }

    .cart-product {
        position: absolute;
        transition: left 500ms;
        width: 90px;
        height: 90px;
        margin-top: 10px;
        margin-right: 10px;
        border-radius: 45px;
        background-color: #111;
        border: 10px solid #26ade4;

        &:hover {
            cursor: pointer;
        }

        &-image {
            position: absolute;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            padding: 15px;

            &-inner {
                background-size: contain;
                background-repeat: no-repeat;
                background-position: center center;
                width: 100%;
                height: 100%;
            }
        }

        &-count {
            position: absolute;
            min-width: 45px;
            height: 45px;
            right: -15px;
            bottom: -15px;
            padding: 10px;
            font-weight: bold;
            color: $white;
            text-align: center;
            background-color: darken($omnomcom, 10%);
        }
    }

    #controls {
        .btn {
            transition: all 0.5s;
            transform: translate(0, 0);
            opacity: 1;

            &:disabled {
                transform: translate(200px, 0);
                opacity: 0;
            }
        }
    }

    #logout-button {
        margin-top: 50px;
    }

    .info {
        line-height: 50px;
        font-size: 20px;
        transition: all 0.5s;
        opacity: 1;

        &.inactive {
            opacity: 0.5;
        }
    }

    .modal {
        .qrAuth {
            text-align: center;
            color: #eeeeee;
            font-size: 20px;

            img {
                background-color: #eeeeee;
                padding: 15px;
            }
        }

        &#finished-modal {
            .modal-content {
                background-color: #343334;
                overflow-y: hidden;
            }
            #purchase-movie {
                margin-top: 20px;
                margin-bottom: -30px;
            }
        }
    }
}

// Membership Contract
#membership-contract > div {
    max-width: 600px;
}

// Tables
#user-admin {
    .table-responsive {
        .controls {
            min-width: 100px;
        }
        .fullname {
            min-width: 180px;
        }
        .utwente-department {
            min-width: 70px;
        }
    }
}
/* ... */

